Finished a protoype about us page, will work on our Product next

--- a/client/AboutUs.html
+++ b/client/AboutUs.html
@@ -1,5 +1,63 @@
 
 
 <template name = "AboutUs">
-    <h1> About the Creators</h1>
+    <div class = "ui center aligned raised segment">
+        <h1> About the Creators</h1>
+    </div>
+
+    <div class = "ui grid container">
+        <div class = "ui two column stackable grid">
+
+            <div class = "vertical aligned row">
+                <div class = "column">
+                    <h3 class = "ui header center aligned"> Justice League </h3>
+                    <img class="ui medium centered bordered rounded image" src="/justiceLeague.jpg">
+                </div>
+                <div class = " ui vertical aligned divider"></div>
+
+                <div class = "column">
+                    <div class = "ui raised padded blue text container segment">
+                        Justice League was been working in the Construction Industry for 25 years.
+                        After spending countless number of hours over the years finding the appropriate
+                        lock box, he decided to do something about it.
+                        <div class = "ui bulleted list">
+                            <div class = "item"> Batman is Bruce Wayne</div>
+                            <div class = "item"> Superman is Clark Kent</div>
+                            <div class = "item"> The Flash is Barry Allen</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class = "ui divider"></div>
+
+            <div class = "vertical aligned row">
+                <div class = "column">
+                    <h3 class = "ui header center aligned"> The X-Men </h3>
+                    <img class="ui medium centered bordered rounded image" src="/xmen.jpg">
+                </div>
+                <div class = " ui vertical aligned divider"></div>
+
+                <div class = "column">
+                    <div class = "ui raised padded blue text container segment">
+                        The X-Men are comprised of adult and teenage mutants brought together <body>
+                            Professor Xavier. Their goal is combat the evils of the world, whether it be
+                            the opposite-minded ideas of Magneto, or the lack of human understanding and compassion.
+                        </body>
+                        <div class = "ui bulleted list">
+                            <div class = "item">Left: Gambit & Jean Grey</div>
+                            <div class = "item">Middle: Wolverine & Storm</div>
+                            <div class = "item">Right: Rogue & Cyclops</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class = "ui divider"></div>
+
+        </div>
+    </div>
+
 </template>
