--- a/client/main.html
+++ b/client/main.html
@@ -21,13 +21,10 @@
                     <h1 class="ui left aligned red header">The LockBoard Group</h1>
                 </div>
 
-
             </div>
 
-
-
                 <div class="ui large secondary inverted pointing stackable menu">
-                    <div class="ui five column  stackable grid container">
+                    <div class="ui five column stackable grid container">
 
 
                         <div class = "column">
@@ -59,5 +56,5 @@
 
     {{> yield}}
         <hr />
-        <p>Copyright &copy; Todos, 2014-2015.</p>
+        <p>Copyright &copy; The LockBoard Group, 2015-2016.</p>
 </template>
