Need to add content for Our Product pages before meeting tomorrow. Look into a way to change the templates between OurProduct and main...

--- a/client/AboutUs.html
+++ b/client/AboutUs.html
@@ -1,7 +1,7 @@
 
 
 <template name = "AboutUs">
-    <div class = "ui center aligned raised segment">
+    <div class = "ui center aligned raised grey segment">
         <h1> About the Creators</h1>
     </div>
 
@@ -11,13 +11,13 @@
             <div class = "vertical aligned row">
                 <div class = "column">
                     <h3 class = "ui header center aligned"> Justice League </h3>
-                    <img class="ui medium centered bordered rounded image" src="/justiceLeague.jpg">
+                    <img class="ui medium centered bordered rounded image" src="/pictures/aboutus/justiceLeague.jpg">
                 </div>
                 <div class = " ui vertical aligned divider"></div>
 
                 <div class = "column">
                     <div class = "ui raised padded blue text container segment">
-                        Justice League was been working in the Construction Industry for 25 years.
+                        Justice League has been working in the Construction Industry for 25 years.
                         After spending countless number of hours over the years finding the appropriate
                         lock box, he decided to do something about it.
                         <div class = "ui bulleted list">
@@ -35,7 +35,7 @@
             <div class = "vertical aligned row">
                 <div class = "column">
                     <h3 class = "ui header center aligned"> The X-Men </h3>
-                    <img class="ui medium centered bordered rounded image" src="/xmen.jpg">
+                    <img class="ui medium centered bordered rounded image" src="/pictures/aboutus/xmen.jpg">
                 </div>
                 <div class = " ui vertical aligned divider"></div>
 
