--- a/client/ourProdTemp.html
+++ b/client/ourProdTemp.html
@@ -10,15 +10,16 @@
         <div class = "body-back">
             <div class="ui inverted vertical center aligned segment landing-image ">
 
+
                 <div class="ui grid">
                     <div class="two wide column"></div>
-                    <div class="four wide column">
+                    <div class="five wide column">
                         <img class="ui mini left floated image" src="pictures/home/csworker.png">
 
                     </div>
 
                     <div class="six wide column">
-                        <h1 class="ui left aligned red header">The LockBoard Group</h1>
+                        <h1 class="ui right aligned red header">The LockBoard Group</h1>
                     </div>
 
                 </div>
@@ -55,7 +56,21 @@
 
             {{ > OurProduct}}
             <hr />
-            <p>Copyright &copy; The LockBoard Group, 2015-2016.</p>
+            <div class ="ui grid container center aligned text">
+                <div class = "center aligned row">
+                    <i class="facebook square blue big icon"></i>
+                    <i class="google plus square red big icon"></i>
+                    <i class="linkedin square big icon"></i>
+                    <i class="twitter square teal big icon"></i>
+                    <i class="instagram big icon"></i>
+                    <i class="youtube red big icon"></i>
+
+
+                </div>
+                <div class = "row">
+                    <p>Copyright &copy; The LockBoard Group, 2015-2016.</p>
+                </div>
+            </div>
 
         </div>
 </template>
